eks-apps/manifests/ingress/app2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app2-ingress
  namespace: app2
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: app2.cloudcraftlab.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app2-service
                port:
                  number: 80
